# trying-to-survive

./: CMakeLists.txt  main.cpp
SFML-2.5.1/include/SFML/System/: Time.hpp
controller/: controller.cpp  controller.h
model/: bullet.cpp  bullet.h  creature.cpp  creature.h  drop.cpp  drop.h  enemy.cpp  enemy.h  game.cpp  game.h  hero.cpp  hero.h  petr.cpp  petr.h  projectile.cpp  projectile.h  world_map.cpp  world_map.h  world_object.cpp  world_object.h
visual/: draw_game_elements.cpp  draw_game_elements.h  main_menu.cpp  main_menu.h  maine_menu.cpp  maine_menu.h  start_menu.cpp  start_menu.h  view.cpp  view.h  view_game.cpp  view_game.h
